--- a/store/blocks/header.jsonc
+++ b/store/blocks/header.jsonc
@@ -48,8 +48,9 @@
     "props": {
       "title": "Logo",
       "href": "/",
-      "url": "https://brand.vtex.com/static/media/VTEX_pink_RGB.751a9fb5.svg",
-      "width": "80"
+      "url": "assets/img/logo-color.png",
+      "width": "120",
+      "height": "40"
     }
   },
   "header-layout.mobile": {
@@ -75,5 +76,12 @@
   },
   "drawer": {
     "children": []
+  },
+  "minicart.v2": {
+    "props": {
+      "variation": "popup",
+      "itemCountMode": "total",
+      "quantityDisplay": "always"
+    }
   }
 }
